# CG1

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
